--- a/administrator/AbsensiMesinHarian.html
+++ b/administrator/AbsensiMesinHarian.html
@@ -270,7 +270,7 @@
                         <div>
                             <nav aria-label="breadcrumb">
                                 <ol class="breadcrumb breadcrumb-style1 mg-b-10">
-                                    <li class="breadcrumb-item"><a href="#">Mesin Absensi</a></li>
+                                    <li class="breadcrumb-item"><a href="#">Monitoring Absensi</a></li>
                                     <li class="breadcrumb-item active" aria-current="page">Data Absensi Mesin Harian</li>
                                 </ol>
                             </nav>
@@ -353,7 +353,7 @@
                                             <th>Jabatan</th>
                                             <th>Waktu Datang</th>
                                             <th>Waktu Pulang</th>
-                                            <th>Device</th>
+                                            <th>Registration Device</th>
                                             <th>File</th>
                                             <th>Rev</th>
                                         </tr>
@@ -371,7 +371,6 @@
                                             <td>02/01/2023 16:04:50</td>
                                             <td>
                                                 <h6 class="tx-13 mg-b-2 tx-dark tx-medium">CQLN230660015(a SETDA FaceID Umum)</h6>
-                                                <p class="tx-12 mg-b-10">Fingerprint</p>
                                             </td>
                                             <td>
                                                 <a
