--- a/administrator/AgendaSKPD.html
+++ b/administrator/AgendaSKPD.html
@@ -111,14 +111,14 @@
                         <a href="statistik-pegawai.html" class="nav-link"><i data-feather="pie-chart"></i> <span>Statistik Pegawai</span></a>
                     </li>
                     <!-- Pengaturan -->
-          <li class="nav-label mg-t-25">Pengaturan</li>
-          <li class="nav-item">
-            <a href="pengumuman.html" class="nav-link"><i data-feather="bell"></i> <span>Pengumuman </span></a>
-          </li>
-          <li class="nav-item">
-            <a href="API-Kepegawaian.html" class="nav-link"><i data-feather="link-2"></i> <span>API Kepegawaian </span></a>
-          </li>
-          <!-- DATA MASTER KEPEGAWAIAN -->
+                    <li class="nav-label mg-t-25">Pengaturan</li>
+                    <li class="nav-item">
+                        <a href="pengumuman.html" class="nav-link"><i data-feather="bell"></i> <span>Pengumuman </span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="API-Kepegawaian.html" class="nav-link"><i data-feather="link-2"></i> <span>API Kepegawaian </span></a>
+                    </li>
+                    <!-- DATA MASTER KEPEGAWAIAN -->
                     <li class="nav-label mg-t-25">Data Master Kepegawaian</li>
                     <li class="nav-item">
                         <a href="data-pegawai.html" class="nav-link"><i data-feather="user"></i> <span>Pegawai ASN</span></a>
@@ -356,7 +356,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div data-label="List Rekap Agenda SKPD" class="df-example demo-table">
+                            <div data-label="Data Rekap Agenda SKPD" class="df-example demo-table">
                                 <div class="table-responsive">
                                     <table id="datatables" class="table table-hover" style="width: 100%;">
                                         <thead class="thead-primary">
@@ -365,7 +365,7 @@
                                                 <th rowspan="2">Nama SKPD</th>
                                                 <th rowspan="2">Pegawai</th>
                                                 <th colspan="4" class="text-center">Kehadiran</th>
-                                                <th colspan="5" class="text-center">Absen Kantor</th>
+                                                <th colspan="6" class="text-center">Absen Kantor</th>
                                                 <th rowspan="2">Persentase</th>
                                             </tr>
                                             <tr>
@@ -374,7 +374,8 @@
                                                 <th>WFA</th>
                                                 <th>Total</th>
                                                 <th>Alpa</th>
-                                                <th>DL/Tugas Lain</th>
+                                                <th>Dinas Luar</th>
+                                                <th>Tugas Lain</th>
                                                 <th>Izin/Sakit</th>
                                                 <th>Cuti</th>
                                                 <th>Total</th>
@@ -382,19 +383,20 @@
                                         </thead>
                                         <thead class="bg-transparent">
                                             <tr>
-                                            <td class="text-start"><strong>Urutan</strong></td>
-                                            <td class="text-start"><strong>Total</strong></td>
-                                            <td class="text-end"><strong>20.000</strong></td>
-                                            <td class="text-end"><strong>19.994</strong></td>
-                                            <td class="text-end"><strong>1</strong></td>
-                                            <td class="text-end"><strong>1</strong></td>
-                                            <td class="text-end"><strong>1</strong></td>
-                                            <td class="text-end"><strong>1</strong></td>
-                                            <td class="text-end"><strong>1</strong></td>
-                                            <td class="text-end"><strong>1</strong></td>
-                                            <td class="text-end"><strong>1</strong></td>
-                                            <td class="text-end"><strong>1</strong></td>
-                                            <td class="text-end"><strong>100%</strong></td>
+                                                <td class="text-start"><strong>Urutan</strong></td>
+                                                <td class="text-start"><strong>Total</strong></td>
+                                                <td class="text-end"><strong>20.000</strong></td>
+                                                <td class="text-end"><strong>19.994</strong></td>
+                                                <td class="text-end"><strong>1</strong></td>
+                                                <td class="text-end"><strong>1</strong></td>
+                                                <td class="text-end"><strong>1</strong></td>
+                                                <td class="text-end"><strong>1</strong></td>
+                                                <td class="text-end"><strong>1</strong></td>
+                                                <td class="text-end"><strong>1</strong></td>
+                                                <td class="text-end"><strong>1</strong></td>
+                                                <td class="text-end"><strong>1</strong></td>
+                                                <td class="text-end"><strong>1</strong></td>
+                                                <td class="text-end"><strong>100%</strong></td>
                                             </tr>
                                         </thead>
                                         <tbody>
@@ -403,6 +405,7 @@
                                                 <td class="text-start">
                                                     <h6 class="tx-13 mg-b-2 tx-primary">Dinas Pendidikan</h6>
                                                 </td>
+                                                <td class="text-end">1</td>
                                                 <td class="text-end">1</td>
                                                 <td class="text-end">1</td>
                                                 <td class="text-end">1</td>
